[project]
name = "dubizzle-car-assistant"
version = "0.1.0"
description = "AI Assistant backend & frontend for dubizzle cars"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "google-genai>=0.3.0",
    "pandas>=2.2.0",
    "streamlit>=1.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["."]